# rust-embed-stm32h743

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
