[package]
name = "app"
version = "0.1.0"
edition = "2021"
exclude = [".gitignore"]

[dependencies]
embedded-hal = "0.2.7"
nb = "1"

cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"

# stm32h7xx-hal = { version = "0.16.0", features = ["stm32h743v","rt"] }

panic-halt = "0.2.0"

cfg-if = "1.0.0"

[dependencies.stm32h7xx-hal]
version = "^0"
features = ["stm32h743v", "rt"]



